# RAGTest

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/text_files/: sample1.txt  sample2.txt
src/: EmbeddingManager.py  FileLoader.py  LLMProcess.py  RAGRetriever.py  SQLConnection.py  URLLoader.py  VectorStore.py  app.py
